tests/snapshots/test_runner__tests__compiler__typecheck__contextual_unification_2.kk.snap
---
source: tests/test_runner.rs
expression: stripped_actual_output.trim()
---
============
INPUT
============
let f
  : | Integer => Null
  = | x: String => null

============
EXIT CODE
============
1

============
STDOUT
============


============
STDERR
============
error:
  ┌─ tests/compiler/typecheck/contextual_unification_2.kk:3:10
  │
3 │   = | x: String => null
  │          ^^^^^^ Unnecessary type annotation
  │
  = Based on higher level type annotations, we already know that the expected type is:

      Integer

    Remove this type annotation to fix this error.
